--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
 @charset "UTF-8";
+
+/*poppins*/@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 /*GERAL*/
 *{
     margin: 0;
     padding: 0;
 }
+
 header{
     background-color: blueviolet;
 }
@@ -23,6 +27,14 @@ main{
     max-width: 75em;
     background-color: blanchedalmond;
 }
+h2{
+    font-family: "Poppins", Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    border-left: 5px solid blue;
+    margin: 20px 0px 10px 0px;
+    padding: 5px 0px;
+    text-indent: 8px;
+}
 
 .vitrine{
     width: 100%;
@@ -33,14 +45,39 @@ main{
     gap: 50px; /*separa de forma igual*/
 }
 .produto{
-
     width: 233px;
     height: 417px;
     background-color: brown;
+    border: 3px solid red;
+    border-radius: 10px;
+}
+img{
+    max-width: 100%;/*233px*/
+    display: block;
+    padding-top: 10%;
+}
+.informacao-produto{
+    height: 18vh;
+    background-color: rgb(253, 252, 251);
+}
+p{
+    font-size: 13pt;
+    font-family: "Poppins",Arial, Helvetica, sans-serif;
+    font-weight: 600;
+    text-align: justify;
+    padding: 10px 8px;
+    color: #8f8f8f;
+}
+h3.preco{
+    color: #3636fc;
+    padding: 10px 0px 0px 5px;
+    font-weight: 600;
+    font-size: 18pt;
 }
 
 /*CABECALHO*/
 footer{
+    text-align: center;
     background-color: pink;
 }
 
