--- a/style.css
+++ b/style.css
@@ -45,27 +45,38 @@ h2{
     gap: 50px; /*separa de forma igual*/
 }
 .produto{
+    display: block;
     width: 233px;
     height: 417px;
     background-color: brown;
     border: 3px solid red;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 img{
     max-width: 100%;/*233px*/
-    display: block;
-    padding-top: 10%;
 }
-.informacao-produto{
-    height: 18vh;
-    background-color: rgb(253, 252, 251);
+
+.img-produto{
+    background-color: pink;
+    height: 55%;
 }
+
+.descricao-produto{
+    background-color: rgb(46, 184, 11);
+    height: 35%;
+}
+
+.valor-produto{
+    background-color: rgb(30, 123, 210);
+    height: 10%;
+}
+
 p{
     font-size: 13pt;
     font-family: "Poppins",Arial, Helvetica, sans-serif;
     font-weight: 600;
     text-align: justify;
-    padding: 10px 8px;
+    padding: 15px 8px;
     color: #8f8f8f;
 }
 h3.preco{
@@ -93,9 +104,21 @@ footer{
     }
 }
 @media (max-width: 769px){
+    .vitrine{
+        gap: 3px;
+    }
     .produto{
         width: 23vw;
         height: 324px;
+    }
+
+    p{
+        font-size: 12pt;
+    }
+
+    h3.preco{
+        padding-top: 5px;
+        font-size: 14pt;
     }
     
 }
@@ -106,13 +129,72 @@ footer{
     .produto{
         height: 300px;
     }
+
+@media (min-width: 530px) and (max-width:537px){
+    .produto{
+        width:43vw;
+        height: 430px;
+    }
+    h3.preco{
+        padding:10px;
+    }
+}
 }
 @media(max-width: 426px){
     .vitrine{
-        gap: 10px;
+        gap: 8px;
     }
     .produto{
+        max-width: 172.75px;
         width: 45vw;
+        border-width: 2px;
+    }
+
+    .img-produto{
+        height: 58%;
     }
     
+    .descricao-produto{
+        height: 34%;
+    }
+    
+    .valor-produto{
+        height: 8%;
+    }
+
+    p{
+        padding-top: 0px;
+        font-size: 10pt;
+    }
+    
+    h3.preco{
+        padding-top: 5px;
+        font-size: 12pt;
+    }
+}
+
+@media(max-width:321px){
+    .vitrine{
+        gap: 4px;
+    }
+
+    p{
+        font-size: 10pt;
+    }
+
+    h3.preco{
+        padding-top: 4px;
+    }
+
+    .img-produto{
+        height: 49%;
+    }
+    
+    .descricao-produto{
+        height: 41%;
+    }
+    
+    .valor-produto{
+        height: 10%;
+    }
 }
